--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(get_climate)
 export(get_coordinates)
 export(get_date_range)
 export(get_distances)
+export(get_inmet_data)
 export(get_pcds)
 import(rvest)
