--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ export(inpe_station_coordinates)
 export(inpe_station_data)
 export(inpe_station_period)
 export(inpe_stations)
-export(nearest_station)
+export(nearest_stations)
 import(rvest)
